# training-agentic-engineering-exercises

./: .gitignore  README.md  pyproject.toml
01-getting-started/: README.md  pyproject.toml
01-introduction/: README.md
02-prompt-and-context-engineering/: README.md  data.csv  pyproject.toml  summarize_csv.py
03-customization/: README.md  pyproject.toml
04-using-claude-code-responsibly/: .gitignore  README.md  pyproject.toml
04-using-claude-code-responsibly/.claude/: settings.json
04-using-claude-code-responsibly/data/: sales_report.csv
04a-permissions-and-sandboxing/: README.md  pyproject.toml  read_csv.py
04a-permissions-and-sandboxing/.claude/: CLAUDE.md
05-tools-and-capabilities/: README.md  pyproject.toml
05-tools-and-capabilities/.claude/agents/: explorer.md
05-tools-and-capabilities/.claude/skills/analyze-markdown/: SKILL.md  analyze.py
06-workflows/: README.md  pyproject.toml
