[project]
name = "agentic-engineering-exercises"
version = "0.1.0"
description = "Exercises for the Agentic Engineering course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
python-preference = "only-managed"

[tool.uv.workspace]
members = [
    "01-getting-started",
    "02-prompt-and-context-engineering",
    "03-customization",
    "04a-permissions-and-sandboxing",
    "05-tools-and-capabilities",
    "06-workflows",
]
